# pUzi-python

./: .gitignore  CONTRIBUTORS  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python.yaml
tests/: test_uzi.py  test_uzireader.py  test_uzivalidate.py
tests/certs/: generate_mock_certs.sh
uzireader/: __init__.py  consts.py  exceptions.py  uzi.py  uzipassuser.py  uzipassvalidator.py  uziserver.py
