[project]
name = "pUzi"
description = "Python UZI card lib"
version = "0.1.0"
author="Jan Klopper"
author_email="jan@underdark.nl"
description="pUzi, python3, Proficient UZI pass reader in python."
keywords="Uzipas, pUzi"
license="European Union Public Licence 1.2 (EUPL 1.2)"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
]
requires-python=">=3.6"

[project.urls]
Repository="https://github.com/minvws/pUzi-python"

[build-system]
requires = [
    "cryptography>=3.1",
    "setuptools>=40.8.0",
    "wheel",
]
build-backend = "setuptools.build_meta"
